@@ -1,2 +1,0 @@
-Site URL: https://americass.net/
-DMCA: https://americass.net/dmca
